# aizuna

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-APACHE-2.0  LICENSE-MIT  README.md  rustfmt.toml
docs/: aizuna.html  aizuna_command.html  aizuna_config.html  aizuna_introduction.html  aizuna_term.html  aizuna_thread.html  connectors.html  discord.html  faq.html  index.html  print.html  rules.html  searchindex.js  shinen.html  shinen_command.html  shinen_config.html  shinen_term.html
mdbook/: book.toml
mdbook/src/: SUMMARY.md  aizuna.md  aizuna_command.md  aizuna_config.md  aizuna_introduction.md  aizuna_term.md  aizuna_thread.md  connectors.md  discord.md  faq.md  link.md  rules.md  shinen.md  shinen_command.md  shinen_config.md  shinen_term.md
src/: aizuna.rs  ask.rs  error.rs  format_indent.rs  lib.rs  main.rs  uuid_set.rs
src/aizuna/: aizuna.rs  behavior.rs  command.rs  config.rs  connector.rs  dice.rs  message.rs  mod.rs  responce.rs  session.rs  session_kind.rs  user.rs
src/aizuna/connector/: config.rs  console.rs  discord.rs  mod.rs  receiver.rs
src/aizuna/connector/console/: console.rs  mod.rs  receiver.rs
src/aizuna/connector/discord/: config.rs  discord.rs  message.rs  mod.rs  receiver.rs
src/aizuna/rule/: config.rs  mod.rs  shinen.rs
src/aizuna/rule/shinen/: action.rs  card.rs  card_set.rs  color.rs  config.rs  constellation.rs  damage.rs  mod.rs  player.rs  session.rs  shinen.rs  story.rs
