# -*- mode:toml; coding:utf-8-unix; -*-
# =============================================================================
[package]
edition                 = "2021"
name                    = "aizuna"
version                 = "0.1.8-alpha.0"
authors                 = ["hanepjiv <hanepjiv@gmail.com>"]
license                 = "MIT/Apache-2.0"
keywords                = ["bot", "game"]
description             = "Chat BOT."
readme                  = "README.md"
documentation           = "https://docs.rs/aizuna/"
repository              = "https://github.com/hanepjiv/aizuna/"
homepage                = "https://hanepjiv.github.io/aizuna/"
include                 = [ "Cargo.toml",
                            "build.rs",
                            "src/**/*.rs",
                            "crates-io.md",
                            "README.md",
                            "LICENSE-APACHE-2.0",
                            "LICENSE-MIT"
                            ]
publish                 = false
# =============================================================================
[features]
coroutine               = []
coroutine_fringe        = ["coroutine", "fringe"]
# =============================================================================
[build-dependencies]
# =============================================================================
[dependencies]
bitflags                = { default-features = false, version = "^2" }
dirs                    = { default-features = false, version = "^5" }
discord                 = { default-features = false, version = "^0.8" }
env_logger              = { default-features = false, version = "^0.11" }
elicit                  = { default-features = false, version = "^0.7" }
getopts                 = { default-features = false, version = "^0.2" }
log                     = { default-features = false, version = "^0.4" }
rand                    = { default-features =  true, version = "^0.8" }
regex                   = { default-features =  true, version = "^1" }
rusty-leveldb           = { default-features = false, version = "^3" }
serde                   = { default-features = false, version = "^1" }
serde_derive            = { default-features = false, version = "^1" }
serde_json              = { default-features = false, version = "^1" }
toml                    = { default-features = false, version = "^0.8" }
# -----------------------------------------------------------------------------
[dependencies.chrono]
default-features        = false
version                 = "^0.4"
features                = ["clock", "serde"]
# -----------------------------------------------------------------------------
[dependencies.fringe]
default-features        = false
version                 = "^1"
optional                = true
# -----------------------------------------------------------------------------
[dependencies.uuid]
default-features        = false
version                 = "^1"
features                = ["v4", "serde"]
